--- a/app/globals.css
+++ b/app/globals.css
@@ -15,7 +15,9 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
-
+.body {
+  background-color: #f5f7fa;
+}
 body {
   color: var(--foreground);
   background: var(--background);
